--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "flask.py",
+      "src": "api.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)"
+      "src": "/(.*)",
+      "dest": "/api.py"
     }
   ]
 }
